# simple_erp

./: .env  .gitignore  Cargo.toml
end2end/: package-lock.json  package.json  playwright.config.ts
end2end/tests/: example.spec.ts
migrations/: 20230417220748_users.up.sql
src/: app.rs  fallback.rs  lib.rs  logging.rs  main.rs
